Migration to JakartaEE (INCOMPLETE!)
Still  lots of issues: Tests run: 778, Failures: 2, Errors: 64, Skipped: 2